package com.example.testtasktutu.list_screen.data.cache

import androidx.lifecycle.LiveData
import androidx.lifecycle.MutableLiveData
import com.example.testtasktutu.list_screen.domain.RepositoryInfo

class CacheRepositoriesLoader(private val query: String) {

    private val _liveData: MutableLiveData<List<RepositoryInfo>?> by lazy {}
    val liveData: LiveData<List<RepositoryInfo>?> = _liveData




}